AOC 2023 day 10 part 2